# jupyterlab-translate

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE.md  package.json  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release_publish.yml  tests.yml
jupyterlab_translate/: .gettext.json  __init__.py  api.py  cli.py  constants.py  contributors.py  converters.py  finder.py  gettext_extract.py  hooks.py  index.js  plugin.py  pybabel_config.cfg  utils.py
requirements/: run.txt  test.txt
tests/: dummy_pkg.patch  example.json  test_hatch_hook.py  test_utils.py
tests/data/testext/: package.json
tests/data/testext/schema/: schema.json
tests/dummy_pkg/locale/: dummy_pkg.pot
tests/dummy_pkg/src/: documentwidget.ts
