[build-system]
requires = ["hatchling>=1.5.0"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-translate"
description = "JupyterLab Language Pack Translations Helper"
readme = "README.md"
license = {file = "LICENSE.txt"}
authors = [
    { name = "Project Jupyter Contributors", email = "jupyter@googlegroups.com" }
]
classifiers = [
    "Framework :: Hatch",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["hatch", "jupyterlab", "language", "localization"]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
    "importlib-metadata>=4.8.3;python_version<\"3.10\"",
    "babel",
    "click",
    "copier>=7.0.0",
    "copier-templates-extensions",
    "crowdin-api-client",
    "hatchling>=1.5",
    "jinja2-time",
    "polib",
    "requests"
]

[project.optional-dependencies]
test = [
    "hatch",
    "pre-commit",
    "pytest",
    "pytest-cov",
]

[project.urls]
homepage = "https://github.com/jupyterlab/jupyterlab-translate"

[project.scripts]
jupyterlab-translate = "jupyterlab_translate.cli:main"
gettext-extract = "jupyterlab_translate.gettext_extract:main"

[project.entry-points.hatch]
jupyter-translate = "jupyterlab_translate.hooks"

[tool.hatch.version]
path = "jupyterlab_translate/__init__.py"
