[metadata]
name = jupyterlab-translate
version = attr: jupyterlab_translate.__version__
description = Jupyterlab Language Pack Translations Helper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jupyterlab/jupyterlab-translate
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
author = Project Jupyter Contributors
author_email = jupyter@googlegroups.com
license = BSD-3-Clause
keywords = localization, translation, jupyterlab, jupyter, i18n, i10n
platforms = Linux, Mac OS X, Windows

[options]
packages = find:
include_package_data = True
install_requires =
    babel
    click
    cookiecutter
    polib
python_requires = >=3.6

[options.entry_points]
console_scripts =
    jupyterlab-translate = jupyterlab_translate.cli:main
    gettext-extract = jupyterlab_translate.gettext_extract:main

[options.extras_require]
test = check-manifest; pytest; pytest-cov

[bdist_wheel]
universal=1
